# cmwb

./: .gitignore  readme.md
backend/: Cargo.toml  env.template  observations.json  readme.md
backend/common/: Cargo.toml  diesel.toml
backend/common/migrations/2024-10-18-190854_fmp_basics/: down.sql  up.sql
backend/common/src/: db.rs  lib.rs  models.rs  models_fed.rs  models_fmp.rs  schema.rs
backend/fakefmpserver/: Cargo.toml
backend/fakefmpserver/src/: main.rs
backend/server/: Cargo.toml
backend/server/src/: auth.rs  config.rs  dummy.rs  fed_playground.rs  fmp_playground.rs  frontend.rs  main.rs  user.rs
