[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
reqwest = "0.12.8"
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
serde_json = "1.0.128"
rand = "0.8.5"
rust-argon2 = "2.1"
dotenvy = "0.15"
diesel = { version = "2.2.4", features = [
    "postgres",
    "64-column-tables",
    "chrono",
] }
chrono = { version = "0.4.38", features = ["serde"] }
