[package]
name = "fakefmpserver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
reqwest = "0.12.8"
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
serde_json = "1.0.128"
warp = "0.3.6"
common = { path = "../common" }
